# mars-framework

./: .gitignore  CMakeLists.txt  main.py  pyproject.toml
.github/workflows/: c-cpp.yml  codeql.yml  cpp-check.yml
bindings/python/: pyproject.toml
bindings/python/src/: bindings.cpp
core/include/: math_ops.hpp
core/src/: math_ops.cpp
docs/: DEVELOPMENT.md
services/api/: pyproject.toml
