[project]
name = "mars-framework-workspace"
version = "0.0.1"
description = "Monorepo workspace for Mars Framework"
readme = "README.md"
requires-python = ">=3.13.0"

[tool.uv.workspace]
members = [
    "bindings/python",
    "services/api",
    # "shared/*" # Uncomment if shared python packages are moved here
]
